Fix link to return to homepage in index.html

--- a/3.4 Super Bowl Party/index.html
+++ b/3.4 Super Bowl Party/index.html
@@ -20,7 +20,7 @@
             <h3>This is where you want to go for a fucking awesome game:
             <br>
             <a href="https://photos.zillowstatic.com/fp/71073c108077aaf83f4830f1bac5c743-cc_ft_1536.jpg" alt="1216 W. Grove, Bloomington, IL 61701">Party Time!</a>
-            <h3><a href="../4.3 HTML Porfolio Project/index.html">Return to Hompage</a></h3>
+            <h3><a href="../index.html">Return to Hompage</a></h3>
     </h1>
 </body>
 </html>
