--- a/2.4 Movie Ranking Project/index.html
+++ b/2.4 Movie Ranking Project/index.html
@@ -8,6 +8,7 @@
 <p>Comedy about two stars trying to get a job with Google via an internship with them.</p>
 <h3>Batman: Dark Knight</h3>
 <p>Non-Stop action with a great story line to it.</p>
-<h3><a href="..//index.html">Return to Hompage</a></h3>
+<h3><a href="../index.html">Return to Hompage</a></h3>
+
 
 
