Fix HTML encoding and update return link

--- a/About Me/index.html
+++ b/About Me/index.html
@@ -62,6 +62,7 @@
             role with Country Financial as a Tier Three Support agent.  I would take care of
             ordering new phones for employees, new MiFis, iPads, and also troubleshoot them.
         </p>
-        <h3><a href="..//4.3 HTML Porfolio Project/index.html">Return to Hompage</a></h3>
+        <h3><a href="../index.html">Return to Hompage</a></h3>
     </body>
+
 </html>
