Fix HTML structure and update return link

--- a/Contact Me/index.html
+++ b/Contact Me/index.html
@@ -22,6 +22,7 @@
                 <li>Bloomington, IL 61707</li>
             </ul>
         </h2>
-        <h3><a href="..//4.3 HTML Porfolio Project/index.html">Return to Hompage</a></h3>
+        <h3><a href="../index.html">Return to Hompage</a></h3>
     </body>
 </html>
+
