--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <h2>I am a web developer.</h2>
         <hr />
                 <h3><a href="../2.4 Movie Ranking Project/index.html">Movie Ranking Project</a></h3>
-                <img src="./assets/images/Top 3 Movies.png" height="200" alt="Movie Ranking Project"/>
+                <img src="Top 3 Movies.png" height="200" alt="Movie Ranking Project"/>
                 <h3><a href="../3.4 Super Bowl Party/index.html">Super Bowl Party</a></h3>
-                <img src="./assets/images/Super Bowl.png" height="200" alt="Super Bowl Party"/>
+                <img src="Super Bowl.png" height="200" alt="Super Bowl Party"/>
                 <h3><a href="../About Me/index.html">About My IT Career</a></h3>
                 <img src="https://t3.ftcdn.net/jpg/03/12/00/38/360_F_312003832_T2hmgMlJOnDYcDjKybmtyRL0k5taIetb.jpg" height="200" alt="Career Image"/>
                 <h3><a href="../Contact Me/index.html">Contact Me</a> </h3>
